--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .App-wrapper {
-    background: url('./img/landingpage.jpg');
+    background: url('http://storage.googleapis.com/shelton/resources/landingpage.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -26,7 +26,7 @@
         margin: auto;
         width: 100%;
         height: 100%;
-        background: url('./img/navlogowhite.png');
+        background: url('http://storage.googleapis.com/shelton/resources/navlogowhite.png');
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
