--- a/src/App.scss
+++ b/src/App.scss
@@ -122,6 +122,7 @@
     background-color: white;
     transition: 0.2s ease;
     z-index: 1;
+    opacity: 0;
 }
 #popup-wrapper {
     position: absolute;
